k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: amr-engine
  labels:
    name: amr-engine
    app: amr-engine
